<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#383737"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#383737"
        android:orientation="vertical"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/logo_lasts" /><TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ds_tv"
        android:paddingLeft="10dp"
        android:textColor="#fff"
        android:layout_alignParentBottom="true"
        />
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_below="@+id/logo"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/pinn_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comm_pin_code"
                android:padding="10dp"
                android:inputType="numberPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <RadioButton
                    android:id="@+id/premium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/premium"
                    android:selectAllOnFocus="true"
                    />
                <RadioButton
                    android:id="@+id/comact_pluse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compuact_plus"
                    />
                <RadioButton
                    android:id="@+id/compact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compact"
                    />
                <RadioButton
                    android:id="@+id/family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family"
                    />
                <RadioButton
                    android:id="@+id/access"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/access"
                    />
            </RadioGroup>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <EditText
            android:id="@+id/card_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bill_ref_number"
            android:padding="10dp"
            android:inputType="number"
            android:maxLength="7"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <EditText
            android:id="@+id/card_payamount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pay_amount"
            android:padding="10dp"
            android:inputType="number"
            android:maxLength="10"
            />
    </com.google.android.material.textfield.TextInputLayout>



</LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/from_wallet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/from_wallet"
                    android:layout_weight="1"
                    />
                <RadioButton
                    android:id="@+id/from_bank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/from_bank"
                    android:layout_weight="1"

                    />
            </RadioGroup>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
