<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#383737"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#383737"
        android:orientation="vertical"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"

        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/logo_lasts"
            android:id="@+id/img"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wallet_local_remitance"
            android:paddingLeft="10dp"
            android:layout_alignParentBottom="true"
            android:textColor="#fff"
            />


    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_below="@+id/logo"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pinnumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comm_pin_code"
                android:padding="10dp"
                android:inputType="numberPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/frendno"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wallet_mobile_number"
                android:padding="10dp"
                android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/non_customer_customerName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wallet_customer_name"
                android:padding="10dp"
                android:enabled="false"
                android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/cusaddr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wallet_customer_address"
                android:enabled="false"
                android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/amounttosend"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wallet_amount_to_send"
                android:padding="10dp"
                android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <RadioButton
                    android:id="@+id/self"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_deduct_from_sender"/>

                <RadioButton
                    android:id="@+id/friend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wallet_deduct_from_beneficiery" />
            </RadioGroup>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
