<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#383737"
    >
    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:background="#383737"
        android:orientation="vertical"
        android:padding="50dp"
        >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/logo_lasts"
            android:contentDescription="@string/coopayebirr"/>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:background="#fff"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#383737"
        android:paddingLeft="10dp"
        android:text="@string/traffic_penality_payment"
        android:textColor="#fff"
        android:paddingStart="10dp" />
            <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <EditText
        android:id="@+id/traffic_pin_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comm_pin_code"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/traffic_bill_info_request"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/query_bill_info"
                    android:background="@drawable/button_back"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:padding="1dp"

                    />
                <RadioButton
                    android:id="@+id/traffic_full_pay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/full_payment"
                    android:background="@drawable/button_back"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:padding="1dp"
                    />

                <RadioButton
                    android:id="@+id/traffic_partial_pay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:text="@string/partial_payment"
                    android:background="@drawable/button_back"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    />
            </RadioGroup>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>