<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#383737"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#090808"
        android:orientation="vertical"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/logo_lasts" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wallet_mobile_card"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:textColor="#fff"
            />


    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_below="@+id/logo"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/pinnumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comm_pin_code"
                android:padding="10dp"
                android:inputType="numberPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/cyanblue">

                <RadioButton
                    android:id="@+id/self"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/wallet_self_recharge"/>

                <RadioButton
                    android:id="@+id/friend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/wallet_for_other" />
            </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/frendno"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wallet_other_number"
                android:padding="10dp"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/rechargeamount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wallet_recharge_amount"
                android:padding="10dp"
                android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
