<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#383737"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#383737"
        android:orientation="vertical"
        android:id="@+id/logo"
        android:layout_centerHorizontal="true"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/logo_lasts" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_setting"
            android:textColor="#fff"
            android:layout_alignParentBottom="true"
            />


    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_below="@+id/logo"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


           <RadioGroup
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               >
               <RadioButton
                   android:id="@+id/am_lan"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"

                   android:text="@string/amharic"
                   android:tooltipText="@string/amharic"/>
               <RadioButton
                   android:id="@+id/oro_lan"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/oromo"
                   android:tooltipText="@string/oromo"/>
               <RadioButton
                   android:id="@+id/en_lan"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"

                   android:text="@string/english"
                   android:tooltipText="@string/english"/>
               <RadioButton
                   android:id="@+id/som_lan"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/Soomaali"
                   android:tooltipText="@string/language_setting"/>


           </RadioGroup>
           <Button
               android:id="@+id/savelang"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Cancel"
               android:textAllCaps="false"
               android:textColor="#fff"
               android:background="#313030"

               />
       </LinearLayout>


   </androidx.cardview.widget.CardView>

</RelativeLayout>


